--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
+    "react-router-dom": "^6.28.0",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
