--- a/my-react-app/vercel.json
+++ b/my-react-app/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "outputDirectory": "build",
   "framework": "create-react-app",
   "rewrites": [
     {
